--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 01</h2>
-            <p>Texto do artigo 01</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sapiente qui ut cum sunt omnis magnam et recusandae doloribus porro itaque dicta dolor modi repudiandae reprehenderit nisi eveniet, quae ea.</p>
         </article>
         <article>
-            <h2>Artigo 02</h2>
-            <p>Texto do artigo 01</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sapiente qui ut cum sunt omnis magnam et recusandae doloribus porro itaque dicta dolor modi repudiandae reprehenderit nisi eveniet, quae ea.</p>
         </article>
     </main>
 </body>
